2023-12-08  Robby Stephenson  <robby@periapsis.org>

	* Removed backchecking of KWallet in CrossRef source.

2023-10-22  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.5.2.

2023-10-17  Robby Stephenson  <robby@periapsis.org>

	* Updated entry templates to show loan info (Bug 411903).

2023-10-11  Robby Stephenson  <robby@periapsis.org>

	* Added support for outputting a log file (Bug 426624).

2023-09-28  Robby Stephenson  <robby@periapsis.org>

	* Added importer for Discogs collections (Bug 446262).

2023-09-27  Robby Stephenson  <robby@periapsis.org>

	* Added fallback title for entries with no title field (Bug 231867).

2023-09-25  Robby Stephenson  <robby@periapsis.org>

	* Added VGCollect data source.

2023-09-22  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with writing some relative url links (Bug 472778).

2023-09-19  Robby Stephenson  <robby@periapsis.org>

	* Updated Numista data source to fetch more than 20 results.

2023-08-02  Robby Stephenson  <robby@periapsis.org>

	* Removed "Tip of the Day" dialog.

2023-07-16  Robby Stephenson  <robby@periapsis.org>

	* Removed author searches from Google Scholar.

2023-07-05  Robby Stephenson  <robby@periapsis.org>

	* Added SAO/ADS as data source.

2023-07-03  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.5.1.

2023-06-14  Robby Stephenson  <robby@periapsis.org>

	* Added capability to remember entry template for custom collections based on file name.

2023-06-13  Robby Stephenson  <robby@periapsis.org>

	* Added OPDS catalogs as a data source.

2023-05-29  Robby Stephenson  <robby@periapsis.org>

	* Added support for reading images from data URLs.

2023-05-12  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.5.

2023-05-07  Robby Stephenson  <robby@periapsis.org>

	* Updated KinoPoisk data source (Bug 469441).

2023-04-29  Robby Stephenson  <robby@periapsis.org>

	* Updated Colnect data source to include video game collections.
